--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     env_file:
       - ./.env
     volumes:
-      - ./db.json:/usr/src/app/db.json:delegated
+      - ./db:/usr/src/app/db:delegated
       - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     deploy:
